新增Python頁及JS換頁功能

--- a/Flex_Example/css/box.css
+++ b/Flex_Example/css/box.css
@@ -30,7 +30,6 @@
   transition: all 0.5s;
 }
 .nav-box .menu-list {
-  top: 30px;
   width: 0;
   line-height: 40px;
   transition: all 0.5s;
@@ -41,8 +40,10 @@
   align-items: normal;
 }
 .nav-box .has-sub .sub {
+  display: none;
   position: fixed;
   left: 250px;
+  border-radius: 0 10px 10px 0;
   border-left: 5px solid rgb(48, 48, 48);
   width: 0;
   height: 0;
@@ -91,6 +92,9 @@
 #menu:checked ~ .nav-box .menu-list .item {
   font-size: 16px;
   color: rgb(48, 48, 48);
+}
+#menu:checked ~ .nav-box .menu-list .ts-menu .has-sub .sub {
+  display: block;
 }
 
 #menu {
