--- a/Flex_Example/css/style.css
+++ b/Flex_Example/css/style.css
@@ -13,13 +13,21 @@
 
 html, body {
   height: 100%;
+  background-color: rgb(48, 48, 48);
 }
 
 .head-bar {
-  width: 100%;
+  color: rgb(216, 216, 216);
+  font-size: 32px;
   flex-shrink: 0;
+  align-items: center;
+  justify-content: center;
   height: 60px;
   background-color: rgb(76, 76, 76);
+}
+.head-bar::after {
+  content: "";
+  width: 50px;
 }
 
 .content {
@@ -32,7 +40,7 @@ html, body {
   padding: 16px;
   border-radius: 10px;
   background-color: rgb(216, 216, 216);
-  opacity: 0.6;
+  opacity: 0.7;
 }
 
 .content-auto-height {
