--- a/Flex_Example/css/style.css
+++ b/Flex_Example/css/style.css
@@ -40,7 +40,7 @@ html, body {
   padding: 16px;
   border-radius: 10px;
   background-color: rgb(216, 216, 216);
-  opacity: 0.7;
+  opacity: 0.8;
 }
 
 .content-auto-height {
@@ -80,8 +80,7 @@ html, body {
   bottom: 60px;
   justify-content: center;
   align-items: center;
-  opacity: 0.6;
   border-radius: 100px;
-  background-color: rgb(29, 154, 119);
-  border: 1px solid rgb(48, 48, 48);
+  background-color: rgba(29, 154, 119, 0.8);
+  border: 1px solid rgba(48, 48, 48, 0.6);
 }/*# sourceMappingURL=style.css.map */
