--- a/Flex_Example/css/box.css
+++ b/Flex_Example/css/box.css
@@ -5,6 +5,7 @@
 .nav-box {
   width: 50px;
   transition: all 0.5s;
+  background-color: #e1e1e1;
 }
 .nav-box::before {
   content: "";
@@ -13,7 +14,7 @@
   height: 100%;
   position: fixed;
   overflow: hidden;
-  background-color: rgb(210, 210, 210);
+  background-color: #e1e1e1;
   z-index: 2;
 }
 .nav-box::after {
@@ -44,7 +45,7 @@
   position: fixed;
   left: 250px;
   border-radius: 0 10px 10px 0;
-  border-left: 5px solid rgb(48, 48, 48);
+  border-left: 5px solid #303030;
   width: 0;
   height: 0;
   overflow: hidden;
@@ -58,13 +59,16 @@
 .nav-box .has-sub:hover .sub, .nav-box .has-sub.active .sub {
   width: auto;
   height: auto;
-  background-color: #bfbfbf;
+  -webkit-backdrop-filter: blur(3px);
+          backdrop-filter: blur(3px);
+  background-color: rgba(200, 200, 200, 0.7);
+  box-shadow: 1px 1px 5px #464646;
 }
 .nav-box .has-sub:hover .sub .item, .nav-box .has-sub.active .sub .item {
   font-size: 16px !important;
 }
 .nav-box .has-sub:hover .sub .item:hover, .nav-box .has-sub.active .sub .item:hover {
-  background-color: #198465;
+  background-color: rgba(22, 131, 99, 0.6);
 }
 .nav-box .item {
   width: 100%;
@@ -73,7 +77,7 @@
   transition: all 0.5s;
 }
 .nav-box .item:hover {
-  background-color: #1d9976;
+  background-color: #1a9973;
 }
 
 #menu:checked ~ .nav-box, #menu:checked ~ .nav-box::after, #menu:checked ~ .nav-box .menu-list {
@@ -91,7 +95,7 @@
 }
 #menu:checked ~ .nav-box .menu-list .item {
   font-size: 16px;
-  color: rgb(48, 48, 48);
+  color: #303030;
 }
 #menu:checked ~ .nav-box .menu-list .ts-menu .has-sub .sub {
   display: block;
