--- a/Flex_Example/css/flex.css
+++ b/Flex_Example/css/flex.css
@@ -4,11 +4,11 @@
 }
 
 .bg-bk{
-    background-color: rgb(40, 40, 40);
+    background-color: #303030;
 }
 
 .bg-wt{
-    background-color: rgb(210, 210, 210);
+    background-color: #e1e1e1;
 }
 
 .flex1{
@@ -82,17 +82,19 @@
     left: 10%;
     width: 80%;
     height: 1px;
+    border-radius: 5px;
     display: block;
-    background-color: rgb(40, 40, 40, 0.5);
+    background-color: #28282880;
 }
 .big-divider{
     left: 1%;
     width: 96%;
     height: 1%;
     margin: 1%;
+    border-radius: 5px;
     margin-bottom: 1%;
     display: block;
-    background-color: rgb(40, 40, 40, 0.3);
+    background-color: #2828284d;
 }
 
 /* 繼承上層樣式 */
@@ -109,4 +111,7 @@
 }
 .is-code{
     font-size: 18px !important;
+}
+.ts-quote{
+    color: #666666;
 }
