--- a/Flex_Example/css/style.css
+++ b/Flex_Example/css/style.css
@@ -5,7 +5,7 @@
 * {
   font-family: "Noto Sans TC", sans-serif;
   font-weight: 500;
-  color: rgb(48, 48, 48);
+  color: #303030;
 }
 * ::-webkit-scrollbar {
   display: none;
@@ -13,17 +13,17 @@
 
 html, body {
   height: 100%;
-  background-color: rgb(48, 48, 48);
+  background-color: #303030;
 }
 
 .head-bar {
-  color: rgb(216, 216, 216);
+  color: #e1e1e1;
   font-size: 32px;
   flex-shrink: 0;
   align-items: center;
   justify-content: center;
   height: 60px;
-  background-color: rgb(76, 76, 76);
+  background-color: #464646;
 }
 .head-bar::after {
   content: "";
@@ -39,7 +39,7 @@ html, body {
   margin-right: 5px;
   padding: 16px;
   border-radius: 10px;
-  background-color: rgb(216, 216, 216);
+  background-color: #e1e1e1;
   opacity: 0.8;
 }
 
@@ -56,17 +56,17 @@ html, body {
 }
 .text::-webkit-scrollbar {
   display: block;
-  width: 10px;
+  width: 12px;
 }
 .text::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgb(48, 48, 48);
+  -webkit-box-shadow: inset 0 0 6px #303030;
   border-radius: 100px;
-  background-color: rgb(76, 76, 76);
+  background-color: #393939;
 }
 .text::-webkit-scrollbar-thumb {
   border-radius: 100px;
-  border: 3px solid rgb(76, 76, 76);
-  background-color: #a5a5a5;
+  border: 3px solid #393939;
+  background-color: #9f9f9f;
   opacity: 0.8;
 }
 
@@ -81,6 +81,9 @@ html, body {
   justify-content: center;
   align-items: center;
   border-radius: 100px;
-  background-color: rgba(29, 154, 119, 0.8);
-  border: 1px solid rgba(48, 48, 48, 0.6);
+  -webkit-backdrop-filter: blur(3px);
+          backdrop-filter: blur(3px);
+  background-image: linear-gradient(to bottom, rgba(22, 131, 99, 0.8), rgba(26, 153, 115, 0.5), rgba(8, 100, 187, 0.3));
+  border: 3px solid rgba(48, 48, 48, 0.6);
+  box-shadow: 0px 1px 2px #464646;
 }/*# sourceMappingURL=style.css.map */
